navigation bar completed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h2 class="nav-title">Siam <span class="text-primary">Ahmed</span></h2>
+        <ul>
+          <li>Portfolio</li>
+          <li>Blog</li>
+          <li><button class="btn-primary">Hire me</button></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
