header and banner is completely done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h2 class="nav-title">Siam <span class="text-primary">Ahmed</span></h2>
         <ul>
@@ -23,6 +23,25 @@
           <li><button class="btn-primary">Hire me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div>
+          <h3 class="banner-title">Hi, I am</h3>
+          <h1 class="banner-sub-title">Siam Ahmed</h1>
+          <p class="banner-description">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <div class="btn-multiple">
+            <div>
+              <button class="btn-primary" style="margin-right: 50px">
+                Download CV
+              </button>
+            </div>
+            <div><button class="btn-primary">Contact</button></div>
+          </div>
+        </div>
+        <img src="images/SA.png" alt="" class="developer-image" />
+      </div>
     </header>
     <main></main>
     <footer></footer>
