--- a/index.html
+++ b/index.html
@@ -43,7 +43,36 @@
         <img src="images/SA.png" alt="" class="developer-image" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <p class="info-title">Name:</p>
+            <p class="info-description">Siam Ahmed</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Email:</p>
+            <p class="info-description">siamahmed234@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Date of Birth:</p>
+            <p class="info-description">24th december,2000</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">From:</p>
+            <p class="info-description">Dhaka,Bangladesh</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
