--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </header>
     <main>
-      <section class="about">
+      <section class="section">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">
           I, m a designer & developer with a passion for web design. I enjoy
@@ -72,7 +72,7 @@
           </div>
         </div>
       </section>
-      <section class="what-i-do">
+      <section class="section">
         <h3 class="section-title">What I do</h3>
         <p class="section-description">
           I have more than 10 years experience building software for clients all
@@ -118,6 +118,78 @@
               ligula eget dolor.
             </p>
           </div>
+        </div>
+      </section>
+      <section class="section">
+        <h3 class="section-title">A summary Of My Resume</h3>
+        <div class="resume-content">
+          <div>
+            <h3 class="resume-title">My Education</h3>
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard Unviersity/2015-2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard Unviersity/2015-2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard Unviersity/2015-2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div>
+            <h3 class="resume-title">My Experience</h3>
+            <div class="resume-item">
+              <h4 class="title">Sr. Font End Developer</h4>
+              <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Jr. Font End Developer</h4>
+              <h5 class="sub-title">Dribbble Inc / 2018 - 2022</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">HTML Developer</h4>
+              <h5 class="sub-title">Adobe Inc / 2017 - 2018</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="resume-button">
+          <button class="btn-primary">Download CV</button>
         </div>
       </section>
     </main>
