icons added with button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/bc5020d9a6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -34,10 +38,14 @@
           <div class="btn-multiple">
             <div>
               <button class="btn-primary" style="margin-right: 50px">
-                Download CV
+                <i class="fa-regular fa-circle-down"></i> Download CV
               </button>
             </div>
-            <div><button class="btn-primary">Contact</button></div>
+            <div>
+              <button class="btn-primary">
+                <i class="fa-solid fa-phone"></i> Contact
+              </button>
+            </div>
           </div>
         </div>
         <img src="images/SA.png" alt="" class="developer-image" />
@@ -189,7 +197,9 @@
           </div>
         </div>
         <div class="resume-button">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-regular fa-circle-down"></i> Download CV
+          </button>
         </div>
       </section>
       <section class="contact">
